# Auto-diary

./: .env.example  .gitignore  Gemfile  README.md  _config.yml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: daily-briefing.yml  jekyll-gh-pages.yml
_data/: navigation.yml
_includes/: footer.html  head.html  header.html
_layouts/: default.html  market-briefing.html  post.html
_posts/market/: 2026-01-26-daily-market-briefing.md  2026-01-27-daily-market-briefing.md  2026-01-28-daily-market-briefing.md  2026-01-29-daily-market-briefing.md  2026-01-30-daily-market-briefing.md  2026-01-31-daily-market-briefing.md
_sass/: custom.scss
assets/css/: style.scss
assets/js/: main.js  market-colors.js
docs/: FORK_GUIDE.md
pages/: about.md  analysis.md  archive.md  market.md
scripts/: __init__.py  config.py  data_fetcher.py  economic_calendar.py  fear_greed_fetcher.py  fred_fetcher.py  gemini_client.py  logger.py  main.py  post_generator.py  report_uploader.py  retry.py  telegram_notifier.py
tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_post_generator.py  test_retry.py  test_telegram_notifier.py
