[project]
name = "auto-diary"
version = "1.0.0"
description = "자동 금융 시황 브리핑 생성기"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "이찬희", email = "lch6817556@gmail.com"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
